# rust-burn-mnist

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
src/: data.rs  lib.rs  main.rs  model.rs  training.rs
