[package]
name = "burn-mnist"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.19.1", features = ["train", "vision", "dataset"] }
burn-ndarray = "0.19.1"
burn-autodiff = "0.19.1"
rand = "0.9.2"
log = "0.4"
env_logger = "0.11"

[[example]]
name = "test-basic"
path = "src/learn/test-basic.rs"